<resources>
    <string name="app_name">Z100会议系统</string>
    <string name="app_name_for_show">中佰会议系统</string>

    <string name="string_input_ip_address">请输入IP地址 ：192.168.1.110:80</string>
    <string name="ip">119.29.192.18:80</string>

    <string name="string_ip_record">历史记录：</string>

    <string name="string_choose_meeting">请选择会议</string>
    <string name="string_reFetch_meeting_list">重新获取会议列表</string>

    <string name="string_meeting_name">会议名称</string>
    <string name="string_time">时间</string>
    <string name="string_meeting_start_time">开会时间</string>
    <string name="string_state">状态</string>
    <string name="string_select">选择</string>
    <string name="string_no_meeting_in_present">当前无会议</string>

    <string name="string_sign_in">签到</string>

    <string name="string_fetch_meeting_error">会议获取失败</string>


    <string name="string_copy_right">copyright ©广州中佰信息科技有限公司</string>


    <string name="string_main_tab_meeting">会议</string>
    <string name="string_main_tab_delegate">人员</string>
    <string name="string_main_tab_agenda">议程</string>
    <string name="string_main_tab_file">文件</string>
    <string name="string_main_tab_about">关于</string>
    <string name="string_main_tab_vote">投票</string>

    <string name="string_file_search_hint">文件名/人名</string>
    <string name="string_delegate_search_hint">人名</string>
    <string name="string_search">搜索</string>


    <string name="string_file_name">文件名</string>
    <string name="string_size">大小</string>
    <string name="string_keynote_Speaker">主讲人</string>
    <string name="string_streamer">横幅</string>

    <string name="string_name">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称 :</string>
    <string name="string_meeting_begin_time">开会时间 :</string>
    <string name="string_meeting_time">开会时长 :</string>
    <string name="string_meeting_delegate">参会人员 :</string>
    <string name="string_meeting_agenda">议&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;程 :</string>

    <string name="string_end_meeting_begin">会议开始于：</string>
    <string name="string_end_meeting_ending">会议结束于：</string>
    <string name="string_end_meeting_duration">会&#160;议&#160;时&#160;长&#160;：</string>
    <string name="string_end_meeting_record">会&#160;议&#160;纪&#160;要&#160;：</string>

    <string name="string_input_server_ip">请输入服务器IP</string>
    <string name="string_tip">提示</string>
    <string name="string_fetch_info_fail">获取信息失败，是否重新获取</string>
    <string name="string_yes">是</string>
    <string name="string_no">否</string>
    <string name="string_exit_system">退出系统？</string>

    <string name="string_launch_vote_fail">开启投票失败！</string>
    <string name="string_close_vote_fail">关闭投票失败！</string>

    <string name="string_current_agenda_already_end">当前议程已结束</string>

    <string name="string_ensure">确定</string>
    <string name="string_cancel">取消</string>

    <string name="string_input_search_key_word">请输入搜索关键字</string>
    <string name="string_file_or_speaker_not_find">不存在该文件或该主讲人</string>

    <string name="string_current_user_not_find">无该用户</string>
    <string name="string_time_duration_str">请输入带 : 的时间字符串</string>

    <string name="string_no_file">该议程没有文件</string>

    <string name="string_no_meetings">服务器没有会议列表</string>

    <string name="string_no_agendas">没有会议议程</string>

    <string name="string_not_start_meeting">会议未开启</string>
    <string name="string_meeting_already_ending">会议已结束</string>

    <!--功能介绍-->
    <string name="string_function_introduce_one">1、实时显示会议进行时间。</string>
    <string name="string_function_introduce_two">2、随时查看与会人员详细信息。</string>
    <string name="string_function_introduce_three">3、查看会议的所有议程。</string>
    <string name="string_function_introduce_four">4、查看会议的所有文件。</string>
    <string name="string_function_introduce_five">5、查看文件详情。</string>
    <string name="string_function_introduce_six">6、会议进行时可进行投票。</string>
    <string name="string_function_introduce_seven">7、主持人可以控制会议进程。</string>


    <string name="string_meeting_description">本系统是为了能够帮助会议组织者极大地降低工作强度，同时响应国家低碳、环保的号召力而编写的</string>

    <string name="string_affirm">确认</string>

</resources>
