<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/distance_ten_dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/id_tv_name_item_select_meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:padding="@dimen/distance_five_dp"
        android:text="@string/string_meeting_name"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/id_tv_time_item_select_meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/distance_five_dp"
        android:text="@string/string_meeting_start_time"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/id_tv_state_item_select_meeting"
        style="@style/selectMeeting_text_view_attr"
        android:gravity="center"
        android:text="@string/string_state"/>

    <TextView
        android:id="@+id/id_tv_select_item_select_meeting"
        style="@style/selectMeeting_text_view_attr"
        android:layout_marginLeft="@dimen/distance_twenty_dp"
        android:layout_marginRight="@dimen/forty_eight"
        android:background="@drawable/ensure_button_shape"
        android:gravity="center"
        android:text="@string/string_affirm"
        android:textColor="@color/color_white"/>
</LinearLayout>

